# penaur

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
utils/: colors.hpp  config.cpp  config.hpp  logger.hpp  namespace.cpp  runner.cpp  runner.hpp
